--- a/docs/并发设计模式.md
+++ b/docs/并发设计模式.md
@@ -49,11 +49,42 @@
 1. 明确不变的边界在哪里。比如持有一个属性为 final 的引用对象，虽然对象本身是 final, 但是该对象的属性却是可以通过其 set 方法来修改，再如持有一个集合对象，集合对象本身是 final 的，但是其中的元素确实可以改变的
 2. 正确的发布对象。比如 Foo 类本身是线程安全不可变类的，但是当它作为另一个类的普通属性时，在并发情况下是无法保证对其修改的原子性和可见性的。这时需要用`AtomicReference` 将其包装。
 
+例子：[ImmutableTest.java](https://github.com/LiuKay/JavaProfessional/blob/master/src/main/java/com/kay/concurrency/design/ImmutableTest.java)
+
 #### Copy-On-Write 模式
 
 #### 线程本地模式
 
-#### Guarded | Suspension 模式
+#### Guarded Suspension 模式
+
+Guarded Suspension 直译过来就是保护性暂停的意思，在并发编程里，调用一个方法时，如果所需要的条件不满足，则当前线程等待，直到条件满足后唤醒线程执行代码逻辑，这其实就是通常所说的 等待-通知的机制，对应就时 wait-nofity
+
+```java
+public class Example {
+    synchronized void guardedMethod() {
+        while (!preCondition()) {
+            try {
+                // Continue to wait
+                wait();
+                // …
+            } catch (InterruptedException e) {
+                // …
+            }
+        }
+        // Actual task implementation
+    }
+    synchronized void alterObjectStateMethod() {
+        // Change the object state
+        // …
+        // Inform waiting threads
+        notify();
+    }
+}
+```
+
+使用Guarded Suspension这种等待-通知的机制可以很容易的将异步操作转换成同步操作来处理，从而是编码更简单。
+
+案例: [GuardedSuspensionDemo](https://github.com/LiuKay/JavaProfessional/blob/master/src/main/java/com/kay/concurrency/design/GuardedSuspensionDemo.java) 描述了一个调用 MQ 异步服务等待回调的例子。
 
 #### Balking 模式
 
