complete concurrent design patterns documentation

--- a/docs/并发设计模式.md
+++ b/docs/并发设计模式.md
@@ -88,13 +88,30 @@ public class Example {
 
 #### Balking 模式
 
+"多线程的IF"
+Demo：自动保存的简单实现。[BalkingPatternDemo](https://github.com/LiuKay/java-professional/blob/master/src/main/java/com/kay/concurrency/design/BalkingPatternDemo.java)
+
 #### Thread-Per-Message 模式
+
+网络编程里典型的模型，Thread-per-connection,  由于Java 线程模型中，一条线程对应操作系统的一个线程，所以采用此模型会消耗大量的资源。
+如果采用协程（轻量级线程）来实现的话，效率会大大提高，比如Go 语言中的实现。
 
 #### Worker | Thread 模式
 
+Java 线程池便是 Worker Thread 模式的经典实现
+[WorkerThreadDemo](https://github.com/LiuKay/java-professional/blob/master/src/main/java/com/kay/concurrency/design/WorkerThreadDemo.java)
+
 #### 两阶段终止模式
+
+两阶段终止，顾名思义就是将线程的终止过程分为2个阶段，第一个阶段给线程发出终止的指令，第二个阶段线程相应终止的指令。典型的做法是使用 interrupt() 方法和设置一个终止标识。
+但是 interrupt() 方法的问题是，被调用的方法可能是第三方的库，并不会正确的设置中断的标志位，所以用 `Thread.currentThread().isInterrupted()`去检测线程是否中断是不靠谱的。
+Demo:[TerminateThreadDemo](https://github.com/LiuKay/java-professional/blob/master/src/main/java/com/kay/concurrency/design/TerminateThreadDemo.java)
 
 #### 生产者-消费者模式
 
-
+为什么要使用生产者-消费者模式？
+1.平衡生产者-消费者的速度
+2.批量执行
+3.分段执行
+Demo：[ProducerConsumerDemo](https://github.com/LiuKay/java-professional/blob/master/src/main/java/com/kay/concurrency/design/ProducerConsumerDemo.java)
 
