for better understand "Monitor"
tag: lock

--- a/docs/管程模型.md
+++ b/docs/管程模型.md
@@ -25,3 +25,104 @@ JVM 在遇到 `synchronized`关键字时，会在同步块的代码前后生成`
 > 再假设之后另外一个线程 T2 执行入队操作，入队操作执行成功之后，“队列不空”这个条件对于线程 T1 来说已经满足了，此时线程 T2 要通知 T1，告诉它需要的条件已经满足了。当线程 T1 得到通知后，会从等待队列里面出来，但是出来之后不是马上执行，而是重新进入到入口等待队列里面。这个过程类似你验血完，回来找大夫，需要重新分诊。
 >
 > 《Java并发编程实战》
+
+
+
+Demo for better understand: [MyBlockingQueue.java](https://github.com/LiuKay/java-professional/blob/master/src/main/java/com/kay/concurrency/aqs/MyBlockingQueue.java)
+
+```java
+/**
+ * For better understand "Monitor"
+ * @param <T>
+ */
+public class MyBlockingQueue<T> {
+
+    private Queue<T> queue;
+
+    private ReentrantLock lock = new ReentrantLock();
+
+    private Condition notEmpty = lock.newCondition();
+
+    private Condition notFull = lock.newCondition();
+
+    private volatile int capacity;
+
+    public MyBlockingQueue(int capacity) {
+        this.capacity = capacity;
+        queue = new ArrayDeque<>();
+    }
+
+    public void add(T t) {
+        lock.lock();
+        try {
+            while (capacity == queue.size()) { // condition not match, then await
+                System.out.println(Thread.currentThread().getName()
+                    + ": queue is full, wait on notFull condition...");
+                notFull.await();
+            }
+            queue.add(t);
+            //add success, signal waiting threads
+            System.out.println(Thread.currentThread().getName() + ": Add queue success.");
+            notEmpty.signalAll();
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        } finally {
+            lock.unlock();
+        }
+    }
+
+    public T pop() {
+        T t = null;
+        try {
+            lock.lock();
+            while (queue.size() == 0) { // condition not match, then await
+                System.out.println(Thread.currentThread().getName()
+                    + ": queue is empty. wait on notEmpty condition...");
+                notEmpty.await();
+            }
+            t = queue.poll();
+
+            System.out.println(Thread.currentThread().getName() + ": Poll queue success.");
+            notFull.signalAll();
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        } finally {
+            lock.unlock();
+        }
+        return t;
+    }
+
+
+    public static void main(String[] args) throws InterruptedException {
+        MyBlockingQueue<String> myQueue = new MyBlockingQueue<>(3);
+
+        Thread taken1 = new Thread(() -> {
+            while (true) {
+                sleep();
+                String pop = myQueue.pop();
+                System.out.println(pop);
+            }
+        }, "TAKEN1");
+
+        Thread offer1 = new Thread(() -> {
+            while (true) {
+                myQueue.add("Hello");
+            }
+        }, "OFFER1");
+
+        offer1.start();
+        Thread.sleep(1000);
+        taken1.start();
+    }
+
+    static void sleep() {
+        try {
+            TimeUnit.SECONDS.sleep(2);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
+
+}
+```
+
