--- a/docs/如何解决死锁.md
+++ b/docs/如何解决死锁.md
@@ -1,13 +1,13 @@
-### 如何解决死锁
+### 如何预防死锁
 
 #### 死锁成立的条件
-1. 互斥锁
-2. 持有且等待
-3. 持有且不可释放
-4. 循环等待获取资源
+1. 互斥，共享资源 X 和 Y 只能被一个线程占用；
+2. 占有且等待，线程 T1 已经取得共享资源 X，在等待共享资源 Y 的时候，不释放共享资源 X；
+3. 不可抢占，其他线程不能强行抢占线程 T1 占有的资源；
+4. 循环等待，线程 T1 等待线程 T2 占有的资源，线程 T2 等待线程 T1 占有的资源，就是循环等待。
 
-只有破环其中任意一项，则可以破环死锁。
+`只要破环其中任意一项，则可以避免死锁`:
 第一个条件，我们本身用的就是互斥锁，所以无法解决
-第二个条件，意思是指，在获取了一个资源之后，等待获取另外一个资源，解决办法就是如果获取不到第二个资源立即返回，中断等待
-第三个条件，在获取第一个资源后，尝试获取另外一个资源，然而不释放先前获取的资源，导致其他线程也无法获取，解决办法是在获取不到其他资源时，释放已获取的资源
-第四个条件，线程T1持有A资源，等待获取B资源，线程T2持有B资源，等待获取A资源，结果导致T1,T2循环等待资源，解决办法可以是将资源排序，按顺序获取
+第二个条件，意思是指，在获取了一个资源之后，等待获取另外一个资源，要破坏这个条件，可以一次性申请所有资源
+第三个条件，在获取第一个资源后，尝试获取另外一个资源，然而不释放先前获取的资源，导致其他线程也无法获取，解决办法是在获取不到其他资源时，释放已获取的资源。关于这个条件`synchronized`无法做到，因为`synchronized`在无法获取到资源时就直接进入阻塞状态了。对于`java.util.concurrent`包里提供的 lock 可以实现，比如超时等待之后调用`unlock()`释放已获取的其他资源。
+第四个条件，线程T1持有A资源，等待获取B资源，线程T2持有B资源，等待获取A资源，结果导致T1,T2循环等待资源，解决办法可以是将资源排序，所有线程都按指定顺序获取。
