chore : use log4j for output

--- a/docs/管程模型.md
+++ b/docs/管程模型.md
@@ -53,13 +53,13 @@ public class MyBlockingQueue<T> {
         lock.lock();
         try {
             while (capacity == queue.size()) { // condition not match, then await
-                System.out.println(Thread.currentThread().getName()
+                log.info(Thread.currentThread().getName()
                         + ": queue is full, wait on notFull condition...");
                 notFull.await();
             }
             queue.add(t);
             //add success, signal waiting threads
-            System.out.println(Thread.currentThread().getName() + ": Add queue success.");
+            log.info(Thread.currentThread().getName() + ": Add queue success.");
             notEmpty.signalAll();
         } catch (InterruptedException e) {
             e.printStackTrace();
@@ -73,13 +73,13 @@ public class MyBlockingQueue<T> {
         try {
             lock.lock();
             while (queue.size() == 0) { // condition not match, then await
-                System.out.println(Thread.currentThread().getName()
+                log.info(Thread.currentThread().getName()
                         + ": queue is empty. wait on notEmpty condition...");
                 notEmpty.await();
             }
             t = queue.poll();
 
-            System.out.println(Thread.currentThread().getName() + ": Poll queue success.");
+            log.info(Thread.currentThread().getName() + ": Poll queue success.");
             notFull.signalAll();
         } catch (InterruptedException e) {
             e.printStackTrace();
@@ -97,7 +97,7 @@ public class MyBlockingQueue<T> {
             while (true) {
                 sleep();
                 String pop = myQueue.pop();
-                System.out.println(pop);
+                log.info(pop);
             }
         }, "TAKEN1");
 
